--- a/index.html
+++ b/index.html
@@ -1,48 +1,60 @@
 <!doctype html>
 <html>
   <head>
-      <title>HotSchedules HW</title>
-      <link rel="stylesheet" type="text/css" href="main.css">
-      <script src='https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0/angular.min.js'></script>
-      <script   src="https://code.jquery.com/jquery-3.1.0.slim.min.js"   integrity="sha256-cRpWjoSOw5KcyIOaZNo4i6fZ9tKPhYYb6i5T9RSVJG8="   crossorigin="anonymous"></script>
-
+    <title>HotSchedules HW</title>
+    <link rel="stylesheet" type="text/css" href="main.css">
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0/angular.min.js'></script>
+    <script src="https://code.jquery.com/jquery-3.1.0.slim.min.js" integrity="sha256-cRpWjoSOw5KcyIOaZNo4i6fZ9tKPhYYb6i5T9RSVJG8=" crossorigin="anonymous"></script>
   </head>
   <body ng-app="takeHomeApp">
-      <section ng-controller="TakeHomeController" class="wrapper">
-          <!-- <visualize-data></visualize-data> -->
-        <header class="header flex-container">
+    <section ng-controller="TakeHomeController" class="wrapper">
+        <!-- <visualize-data></visualize-data> -->
+      <header class="header flex-container">
 
-          <div class="flex-box">
-            <header>Net Total</header>
-            <main class="text-area">{{ NetTotal | currency : symbol }}</main>
-            <footer class="box-footer"><span class="box-arrow">&#x25BC;</span></footer>
-          </div>
+        <div class="flex-box">
+          <header>Net Total</header>
+          <main class="text-area">{{ NetTotal | currency : symbol }}</main>
+          <footer class="box-footer"><span class="box-arrow">&#x25BC;</span></footer>
+        </div>
 
-          <div class="flex-box" id="box2">
-            <header>Avg Net Total (per employee)</header>
-            <main class="text-area" id="pointer">{{ msg }}</main>
-            <footer class="box-footer"><span class="box-arrow">&#x25BC;</span></footer>
-          </div>
-        </header>
+        <div class="flex-box" id="box2">
+          <header>Avg Net Total (per employee)</header>
+          <main class="text-area" id="pointer">{{ msg }}</main>
+          <footer class="box-footer"><span class="box-arrow">&#x25BC;</span></footer>
+        </div>
+      </header>
 
-        <section class="main">
-          <div class="text-area2 hide">
-            <div>
-              <ul ng-repeat=" employee in avgPerEmployee" class="bullet-points">
-                <li>
-                  Employee # <span>{{ employee[0] }}</span>
-                </li>
-                <li>
-                  Net Total: {{ employee[1] | currency : symbol : 2}}
-                </li>
-              </ul>
-            </div>
-          </div>
-        </section>
+      <section class="main hide">
+        <table border="1" cellpadding="5" cellspacing="5">
+          <tr class="table-text-header">
+            <th>No.</th>
+            <th>Employee ID</th>
+            <th>Avg Total</th>
+          </tr>
+          <tbody ng-repeat=" employee in avgPerEmployee | orderBy:'this[0]' " class="bullet-points">
+            <tr>
+              <td>{{$index + 1}}</td>
+              <td class="table-text table-text-col">
+                {{ employee[0] }}
+              </td>
+              <td class="table-text">
+                {{ employee[1] | currency : symbol : 2}}
+              </td>
+            </tr>
+          </tbody>
+          <tfoot>
+            <tr>
+              <td class="empty-cell table-text-col"></td>
+              <td class="empty-cell table-text-col"></td>
+              <td>{{ totalPerEmployee | currency : symbol : 2 }}</td>
+            </tr>
+          </tfoot>
+        </table>
       </section>
-      <footer></footer>
-      <script src='plugins.js'></script>
-      <script src='transform.factory.js'></script>
-      <script src='visualize.directive.js'></script>
+    </section>
+    <footer id="footer"></footer>
+    <script src='plugins.js'></script>
+    <script src='transform.factory.js'></script>
+    <script src='visualize.directive.js'></script>
   </body>
 </html>
